[gd_scene load_steps=7 format=3 uid="uid://dq2wl32dryxcb"]

[ext_resource type="PackedScene" uid="uid://b82l7dh3hat3u" path="res://Scene/Main_Menu_Scene/main_menu.tscn" id="1_2fgu5"]
[ext_resource type="Script" path="res://Scene/main_menu_manager.gd" id="1_eidh4"]
[ext_resource type="PackedScene" uid="uid://chscteuxys6h3" path="res://Scene/Setting/setting.tscn" id="2_lcn5v"]
[ext_resource type="PackedScene" uid="uid://dby81lqmi7alu" path="res://Scene/Instruction/instruction.tscn" id="4_krc1e"]
[ext_resource type="PackedScene" uid="uid://j22xmx8btwfw" path="res://Scene/Account/account.tscn" id="5_uo22b"]
[ext_resource type="PackedScene" uid="uid://pybfapg0lu5t" path="res://Scene/Select_Character_Scene/select_char.tscn" id="6_gcq22"]

[node name="main_menu_manager" type="Node"]
script = ExtResource("1_eidh4")

[node name="Main_Menu" parent="." instance=ExtResource("1_2fgu5")]

[node name="Setting_Canvas" type="CanvasLayer" parent="."]

[node name="Setting" parent="Setting_Canvas" instance=ExtResource("2_lcn5v")]
visible = false

[node name="Instruction_Canvas" type="CanvasLayer" parent="."]

[node name="Instruction" parent="Instruction_Canvas" instance=ExtResource("4_krc1e")]
visible = false

[node name="Account_Canvas" type="CanvasLayer" parent="."]

[node name="account" parent="Account_Canvas" instance=ExtResource("5_uo22b")]
visible = false

[node name="Select_Char" parent="." instance=ExtResource("6_gcq22")]
visible = false
